Fix running tests on OSX.